--- a/_config.yml
+++ b/_config.yml
@@ -101,10 +101,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Sarah Hong"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "This is my **portfolio**."
+  location         : "S. Korea"
   email            :
   links:
     - label: "Email"
